# RustRunLeptosBlog

./: .gitignore  Dockerfile  Dockerfile.leptos  README.md  cloudbuild.leptos.yaml  cloudbuild.yaml  deploy.sh  setup_env.sh
backend/: Cargo.toml  blog.db  check.txt
backend/src/: lib.rs  lib.rs.bak  main.rs
backend/static/: index.html
backend/static/assets/: Post-Cna2i3d4.js  Post-Cy1bWkfh.js  index-BDYPV8Wp.css  index-B_ixKFcj.js  index-C7tm0lEC.js  index-CcmJlTq7.js  index-DQSLd99t.css  index-DSfS9h1B.css
backend/tests/: api_tests.rs
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: style.css
frontend/src/app/: page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/router/: index.ts
frontend/src/views/: Admin.vue  Home.vue  Post.vue
frontend/src/views/__tests__/: Home.spec.ts
leptos_frontend/: Cargo.toml  index.html
leptos_frontend/src/: lib.rs
load-tests/: cloudbuild.yaml  script.js
security-scan/: cloudbuild.yaml
