[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
oauth2 = "4.4"
reqwest = { version = "0.11", features = ["json"] }
actix-session = { version = "0.9", features = ["cookie-session"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
