[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
oauth2 = "4.4"
reqwest = { version = "0.11", features = ["json"] }
actix-session = { version = "0.9", features = ["cookie-session"] }
sqlx = { version = "0.7", default-features = false, features = ["sqlite", "runtime-tokio-rustls", "chrono", "macros"] }
libsqlite3-sys = { version = "0.27", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
base64ct = "=1.6.0"

[dev-dependencies]
actix-rt = "2"
tokio = { version = "1", features = ["full"] }
