[package]
name = "backend"
version = "0.1.3"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
oauth2 = "4.4"
reqwest = { version = "0.11", features = ["json"] }
actix-session = { version = "0.9", features = ["cookie-session"] }
sqlx = { version = "0.7", default-features = false, features = ["sqlite", "runtime-tokio-rustls", "chrono", "macros"] }
libsqlite3-sys = { version = "0.27", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
base64ct = "=1.6.0"
stoolap = "0.1.0"
google-cloud-storage = "0.20"
actix-multipart = "0.6"
uuid = { version = "1.0", features = ["v4"] }
futures-util = "0.3"
mime_guess = "2.0"

[dev-dependencies]
actix-rt = "2"
tokio = { version = "1", features = ["full"] }

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true    # Enable Link Time Optimization.
