[package]
name = "leptos_frontend"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-net = "0.6"
chrono = { version = "0.4", features = ["serde"] }
js-sys = "0.3.83"
gloo-timers = { version = "0.3.0", features = ["futures"] }
pulldown-cmark = "0.9"

[dependencies.web-sys]
version = "0.3"
features = ["FormData", "File", "HtmlInputElement", "FileList", "Event", "EventTarget", "Blob"]
